syntax = "proto3";
package transformation.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/transformation";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/core/matchers/matchers.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/extensions/transformers/xslt/xslt_transformer.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;

message ResponseMatch {
    // Response headers to match on.
    repeated matchers.core.gloo.solo.io.HeaderMatcher matchers = 1;
    // Response code detail to match on. To see the response code details for your usecase,
    // you can use the envoy access log %RESPONSE_CODE_DETAILS% formatter to log it.
    string response_code_details = 2;
    // Transformation to apply on the response.
    Transformation response_transformation = 3;
}

message RequestMatch {
    // Matches on the request properties.
    matchers.core.gloo.solo.io.Matcher matcher = 1;
    // Should we clear the route cache if a transformation was matched.
    bool clear_route_cache = 2;
    // Transformation to apply on the request.
    Transformation request_transformation = 3;
    // Transformation to apply on the response.
    Transformation response_transformation = 4;
}

message Transformations {
    // Apply a transformation to requests.
    Transformation request_transformation = 1;
    // Clear the route cache if the request transformation was applied.
    bool clear_route_cache = 3;
    // Apply a transformation to responses.
    Transformation response_transformation = 2;
}

message RequestResponseTransformations {
    // Transformations to apply on the request. The first request that matches will apply.
    repeated RequestMatch request_transforms = 1;
    // Transformations to apply on the response. This field is only consulted if there is no
    // response transformation in the matched `request_transforms`. i.e. Only one response transformation
    // will be executed. The first response transformation that matches will
    // apply.
    repeated ResponseMatch response_transforms = 2;
}

message TransformationStages {
    // Early transformations happen before most other options (Like Auth and Rate Limit).
    RequestResponseTransformations early = 1;
    // Regular transformations happen after Auth and Rate limit decisions has been made.
    RequestResponseTransformations regular = 2;
    // Post routing transformations happen during the router filter chain. This is important for a number of reasons
    // 1. Retries re-trigger this filter, which might impact performance.
    // 2. It is the only point where endpoint metadata is available.
    // 3. `clear_route_cache` does NOT work in this stage as the routing decision is already made.
    // Enterprise only
    RequestResponseTransformations post_routing = 6;
    // Inherit transformation config from parent. This has no affect on VirtualHost level transformations.
    // If a RouteTable or Route wants to inherit transformations from it's parent RouteTable or VirtualHost,
    // this should be set to true, else transformations from parents will not be inherited.
    // Transformations are ordered so the child's transformation gets priority, so in the case where a child
    // and parent's transformation matchers are the same, only the child's transformation will run because
    // only one transformation will run per stage.
    // Defaults to false.
    bool inherit_transformation = 3;

    // When enabled, log request/response body and headers before and after all transformations defined here are applied.\
    // This overrides the log_request_response_info field in the Transformation message.
    google.protobuf.BoolValue log_request_response_info = 4;

    // Use this field to set Inja behavior when rendering strings which contain
    // characters that would need to be escaped to be valid JSON. Note that this
    // sets the behavior for all staged transformations configured here. This setting
    // can be overridden per-transformation using the field `escape_characters` on
    // the TransformationTemplate.
    google.protobuf.BoolValue escape_characters = 5;
}

// User-facing API for transformation.
message Transformation {
    // The type of transformation to apply.
    oneof transformation_type {
        // Apply transformation templates.
        TransformationTemplate transformation_template = 1;
        // This type of transformation will make all the headers available in the
        // response body. The resulting JSON body will consist of two attributes:
        // 'headers', containing the headers, and 'body', containing the original
        // body.
        HeaderBodyTransform header_body_transform = 2;
        // (Enterprise Only): Xslt Transformation
        envoy.config.transformer.xslt.v2.XsltTransformation xslt_transformation = 3;

    }
    // When enabled, log request/response body and headers before and after this transformation is applied.
    bool log_request_response_info = 4;
}

// Extractions can be used to extract information from the request/response.
// The extracted information can then be referenced in template fields.
message Extraction {
  // The mode of operation for the extraction.
  enum Mode {
    // Default mode. Extract the content of a specified capturing group. In this mode,
    // `subgroup` selects the n-th capturing group, which represents the value that
    // you want to extract.
    EXTRACT = 0;
    // Replace the content of a specified capturing group. In this mode, `subgroup` selects the
    // n-th capturing group, which represents the value that you want to replace with
    // the string provided in `replacement_text`.
    // Note: `replacement_text` must be set for this mode.
    SINGLE_REPLACE = 1;
    // Replace all regex matches with the value provided in `replacement_text`.
    // Note: `replacement_text` must be set for this mode.
    // Note: The configuration fails if `subgroup` is set to a non-zero value.
    // Note: restrictions on the regex are different for this mode. See the regex field for more details.
    REPLACE_ALL = 2;
  }

  // The source of the extraction
  oneof source {
    // Extract information from headers
    string header = 1;
    // Extract information from the request/response body
    google.protobuf.Empty body = 4;
  }

  // The regex field specifies the regular expression used for matching against the source content.
  // - In EXTRACT mode, the entire source must match the regex. `subgroup` selects the n-th capturing group,
  //   which determines the part of the match that you want to extract. If the regex does not match the source,
  //   the result of the extraction will be an empty value.
  // - In SINGLE_REPLACE mode, the regex also needs to match the entire source. `subgroup` selects the n-th capturing group
  //   that is replaced with the content of `replacement_text`. If the regex does not match the source, the result
  //   of the replacement will be the source itself.
  // - In REPLACE_ALL mode, the regex is applied repeatedly to find all occurrences within the source that match.
  //   Each matching occurrence is replaced with the value in `replacement_text`. In this mode, the configuration is rejected
  //   if `subgroup` is set. If the regex does not match the source, the result of the replacement will be the source itself.
  string regex = 2;

  // If your regex contains capturing groups, use this field to determine the
  // group that you want to select. Defaults to 0.
  // If set in `EXTRACT` and `SINGLE_REPLACE` modes, the subgroup represents the capturing
  // group that you want to extract or replace in the source.
  // The configuration is rejected if you set subgroup to a non-zero value when using thev `REPLACE_ALL` mode.
  uint32 subgroup = 3;

  // The value `replacement_text` is used to format the substitution for matched sequences in
  // in an input string. This value is only legal in `SINGLE_REPLACE` and `REPLACE_ALL` modes.
  // - In `SINGLE_REPLACE` mode, the `subgroup` selects the n-th capturing group, which represents
  // the value that you want to replace with the string provided in `replacement_text`.
  // - In `REPLACE_ALL` mode, each sequence that matches the specified regex in the input is
  // replaced with the value in`replacement_text`.
  //     The `replacement_text` can include special syntax, such as $1, $2, etc., to refer to
  // capturing groups within the regular expression.
  //     The value that is specified in `replacement_text` is treated as a string, and is passed
  // to `std::regex_replace` as the replacement string.
  //     For more informatino, see https://en.cppreference.com/w/cpp/regex/regex_replace.
  google.protobuf.StringValue replacement_text = 5;

  // The mode of operation for the extraction.
  // Defaults to EXTRACT.
  Mode mode = 6;
}

// Defines a transformation template.
message TransformationTemplate {

  // If set to true, use JSON pointer notation (e.g. "time/start") instead of
  // dot notation (e.g. "time.start") to access JSON elements. Defaults to
  // false.
  //
  // Please note that, if set to 'true', you will need to use the `extraction`
  // function to access extractors in the template (e.g. '{{
  // extraction("my_extractor") }}'); if the default value of 'false' is used,
  // extractors will simply be available by their name (e.g. '{{ my_extractor
  // }}').
  bool advanced_templates = 1;

  // Use this attribute to extract information from the request. It consists of
  // a map of strings to extractors. The extractor will defines which
  // information will be extracted, while the string key will provide the
  // extractor with a name. You can reference extractors by their name in
  // templates, e.g. "{{ my-extractor }}" will render to the value of the
  // "my-extractor" extractor.
  map<string, Extraction> extractors = 2;
  // Use this attribute to transform request/response headers. It consists of a
  // map of strings to templates. The string key determines the name of the
  // resulting header, the rendered template will determine the value. Any existing
  // headers with the same header name will be replaced by the transformed header.
  // If a header name is included in `headers` and `headers_to_append`, it will first
  // be replaced the template in `headers`, then additional header values will be appended
  // by the templates defined in `headers_to_append`.
  // For example, the following header transformation configuration:
  //
  // ```yaml
  //    headers:
  //      x-header-one: {"text": "first {{inja}} template"}
  //      x-header-one: {"text": "second {{inja}} template"}
  //    headersToAppend:
  //      - key: x-header-one
  //        value: {"text": "first appended {{inja}} template"}
  //      - key: x-header-one
  //        value: {"text": "second appended {{inja}} template"}
  // ```
  // will result in the following headers on the HTTP message:
  //
  // ```
  // x-header-one: first inja template
  // x-header-one: first appended inja template
  // x-header-one: second appended inja template
  // ```
  map<string, InjaTemplate> headers = 3;

  // Defines a header-template pair to be used in `headers_to_append`
  message HeaderToAppend {
    // Header name
    string key = 1;
    // Apply a template to the header value
    InjaTemplate value = 2;
  }

  // Use this attribute to transform request/response headers. It consists of
  // an array of string/template objects. Use this attribute to define multiple
  // templates for a single header. Header template(s) defined here will be appended to any
  // existing headers with the same header name, not replace existing ones.
  // See `headers` documentation to see an example of usage.
  repeated HeaderToAppend headers_to_append = 10;

  // Attribute to remove headers from requests. If a header is present multiple
  // times, all instances of the header will be removed.
  repeated string headers_to_remove = 11;

  // Determines the type of transformation to apply to the request/response body
  oneof body_transformation {
    // Apply a template to the body
    InjaTemplate body = 4;
    // This will cause the transformation filter not to buffer the body.
    // Use this setting if the response body is large and you don't need to
    // transform nor extract information from it.
    Passthrough passthrough = 5;
    // Merge all defined extractors to the request/response body.
    // If you want to nest elements inside the body, use dot separator in the
    // extractor name.
    MergeExtractorsToBody merge_extractors_to_body = 6;
    // A set of key-value pairs to merge into the JSON body.
    // Each value will be rendered separately, and then placed into the JSON body at
    // the specified key.
    // There are a number of important caveats to using this feature:
    // * This can only be used when the body is parsed as JSON.
    // * This option does NOT work with advanced templates currently
    MergeJsonKeys merge_json_keys = 13;
  }

  // Determines how the body will be parsed.
  enum RequestBodyParse {
    // Will attempt to parse the request/response body as JSON
    ParseAsJson = 0;
    // The request/response body will be treated as plain text
    DontParse = 1;
  }
  // Determines how the body will be parsed. Defaults to ParseAsJson
  RequestBodyParse parse_body_behavior = 7;

  // If set to true, Envoy will not throw an exception in case the body parsing
  // fails.
  bool ignore_error_on_parse = 8;

  // Defines an [Envoy Dynamic
  // Metadata](https://www.envoyproxy.io/docs/envoy/latest/configuration/advanced/well_known_dynamic_metadata)
  // entry.
  message DynamicMetadataValue {

    // The metadata namespace. Defaults to the filter namespace.
    string metadata_namespace = 1;

    // The metadata key.
    string key = 2;

    // A template that determines the metadata value.
    InjaTemplate value = 3;

    // Instruct the filter to parse the rendered value as a proto Struct message
    // before setting it as the metadata value.
    bool json_to_proto = 4;
  }
  // Use this field to set Dynamic Metadata.
  repeated DynamicMetadataValue dynamic_metadata_values = 9;

  // Use this field to set Inja behavior when rendering strings which contain
  // characters that would need to be escaped to be valid JSON. Note that this
  // sets the behavior for the entire transformation. Use raw_strings function
  // for fine-grained control within a template.
  google.protobuf.BoolValue escape_characters = 12;

  // Definitions for span transformations for tracing purposes.
  message SpanTransformer {
    // A template that sets the span name. For example, to set the span name to
    // the value of the host header, you can set this value to
    // `'{{header("Host")}}'`
    InjaTemplate name = 1;

    // TODO if we want to set attributes as well, add fields to modify them here.
  }

  // These field numbers are used in envoy-gloo but not exposed. Let's reserve
  // them so we do not drift in numbers between the transformation filter in
  // `envoy-gloo` and our gloo control plane API.
  // 14: string_delimiter
  // https://github.com/solo-io/envoy-gloo/blob/0a088716a0cc04409ad926e7364363c6de4a83a5/api/envoy/config/filter/http/transformation/v2/transformation_filter.proto#L321
  reserved 14;

  // Use this field to modify the span of the trace. This field can only be
  // applied on requestTransformations. Attempting to set this on a
  // responseTransformation will result in an error.
  SpanTransformer span_transformer = 15;

}

// Defines an [Inja template](https://github.com/pantor/inja) that will be
// rendered by Gloo. In addition to the core template functions, the Gloo
// transformation filter defines the following custom functions:
// - header(header_name): returns the value of the header with the given name.
// - extraction(extractor_name): returns the value of the extractor with the
// given name.
// - env(env_var_name): returns the value of the environment variable with the
// given name.
// - body(): returns the request/response body.
// - context(): returns the base JSON context (allowing for example to range on
// a JSON body that is an array).
// - request_header(header_name): returns the value of the request header with
// the given name. Use this option when you want to include request header values in response
// transformations.
// - base64_encode(string): encodes the input string to base64.
// - base64_decode(string): decodes the input string from base64.
// - substring(string, start_pos, substring_len): returns a substring of the
// input string, starting at `start_pos` and extending for `substring_len`
// characters. If no `substring_len` is provided or `substring_len` is <= 0, the
// substring extends to the end of the input string.
message InjaTemplate { string text = 1; }

message Passthrough {}

message MergeExtractorsToBody {}

message MergeJsonKeys {
  message OverridableTemplate {
    // Template to render
    InjaTemplate tmpl = 1;
    // If set to true, the template will be set even if the rendered value is empty.
    bool override_empty = 2;
  }
  /* 
    Map of key name -> template to render into the JSON body.
    Specified keys which don't exist in the JSON body will be set,
    keys which do exist will be overriden.
    
    For example, given the following JSON body:
    {
      "key1": "value1"
    }
    and the following MergeJsonKeys:
    {
      "key1": "{{ header("header1") }}",
      "key2": "{{ header("header2") }}"
    }
    The resulting JSON body will be:
    {
      "key1": "header1_value",
      "key2": "header2_value"
    }
  */
  map<string, OverridableTemplate> json_keys = 2;
}

message HeaderBodyTransform {
  // When transforming a request, setting this to true will additionally add "queryString",
  // "queryStringParameters", "multiValueQueryStringParameters", "httpMethod", "path",
  // and "multiValueHeaders" to the body
  bool add_request_metadata = 1;
}
